--- a/modules/mod_base/lib/less/z.icons/core.less
+++ b/modules/mod_base/lib/less/z.icons/core.less
@@ -1,5 +1,6 @@
 .z-icon,
-.fa-icon {
+.fa-icon,
+.md-icon {
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -24,4 +25,7 @@
 }
 .fa-icon {
     font-family: 'FontAwesome';
+}
+.md-icon {
+    font-family: 'Material Design Iconic Font';
 }
