--- a/modules/mod_base/lib/less/z.icons/icon-buttons.less
+++ b/modules/mod_base/lib/less/z.icons/icon-buttons.less
@@ -55,7 +55,8 @@ button.close {
     // background-color set per brand (template or CSS)
     
     .z-icon,
-    .fa-icon {
+    .fa-icon,
+    .md-icon {
         @_size: @zSocialBtnSize;
         position: absolute;
         display: block;
