--- a/modules/mod_base/lib/less/z.icons.less
+++ b/modules/mod_base/lib/less/z.icons.less
@@ -2,6 +2,7 @@
 See: http://zotonic.com/docs/latest/manuals/templates/icons.html
 */
 @import (reference) "font-awesome.less";
+@import (reference) "material-design-iconic-font.less";
 
 @import "z.icons/variables.less";
 @import "z.icons/path.less";
@@ -9,4 +10,8 @@ See: http://zotonic.com/docs/latest/manuals/templates/icons.html
 @import "z.icons/extend.less";
 @import "z.icons/icons.less";
 @import "z.icons/icon-buttons.less";
+
+@import "z.icons/font-awesome.less";
+@import "z.icons/material-design.less";
+
 .z_icons_create;
