mod_admin: (CSS) file input buttons have varying heights on different OSs

--- a/modules/mod_admin/lib/less/form.less
+++ b/modules/mod_admin/lib/less/form.less
@@ -26,3 +26,7 @@ input {
     }
 }
 
+// file input buttons have varying heights on different platforms
+input.form-control[type=file] {
+    height: auto;
+}
