mow_acl_user_groups: first working version. To do: docs and test interface.

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -256,6 +256,9 @@ button.close {
 .z-btn-remove:hover {
   color: #222222;
 }
+ul.connections-list {
+  min-height: 10px;
+}
 ul.connections-list li:last-child {
   margin-bottom: 10px;
 }
