mod_admin: in tree-list, show the category in gray.
(cherry picked from commit 995bf935f4d4dac1cf711916c277609bd97e1d6e)

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -953,6 +953,10 @@ ul.tree-list li.menu-item .warning {
   top: 12px;
   right: 100px;
 }
+ul.tree-list li.menu-item .category {
+  color: #999;
+  padding-left: 8px;
+}
 ul.tree-list li.menu-item .btns {
   display: block;
   position: absolute;
