--- a/modules/mod_admin/lib/less/base.less
+++ b/modules/mod_admin/lib/less/base.less
@@ -26,9 +26,9 @@ body {
 
 hr {
     background-color: #ddd;
-    border-top-color: #d0d0d0;
+    border: none;
+    height: 1px;
     margin: 10px 0;
-    width: 100%;
 }
 
 p {
