--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -15,6 +15,11 @@
         position: relative;
         padding: 0 @widgetSidePadding 0 @widgetSidePadding;
         
+        hr {
+            margin-left: -@widgetSidePadding;
+            margin-right: -@widgetSidePadding;
+        }
+        
         .widget-content {
             // nested
             padding: 0;
