--- a/modules/mod_admin/lib/less/zotonic-admin.less
+++ b/modules/mod_admin/lib/less/zotonic-admin.less
@@ -35,6 +35,7 @@ limitations under the License.
 @import "logon.less";
 @import "map.less";
 @import "modal.less";
+@import "menu.less";
 @import "navbar.less";
 @import "rtl.less";
 @import "status-leds.less";
