--- a/modules/mod_admin/lib/less/base.less
+++ b/modules/mod_admin/lib/less/base.less
@@ -89,3 +89,8 @@ p {
         -ms-hyphens: auto;
             hyphens: auto;
 }
+
+p .z-btn-help {
+    display: inline;
+    vertical-align: text-bottom;
+}
