--- a/modules/mod_admin/lib/less/modal.less
+++ b/modules/mod_admin/lib/less/modal.less
@@ -11,6 +11,11 @@ div.modal {
     .nav.nav-pills {
         margin-bottom: @baseMargin;
     }
+    .modal-body {
+        > :first-child {
+            margin-top: 0;
+        }
+    }
     .modal-footer {
         .pull-left {
             margin-left: 0;
