--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -32,6 +32,9 @@
 @textColorMuted: #999;
 @textColorLight: #bbb;
 
+@colorLink: #069cd1;
+@colorLinkHover: #046487;
+
 // colors in context
 @backgroundColorRowHover: @backgroundColorInteractive;
 @textColorUnpublished: @textColorLight;
