--- a/modules/mod_admin/lib/less/base.less
+++ b/modules/mod_admin/lib/less/base.less
@@ -94,3 +94,23 @@ p .z-btn-help {
     display: inline;
     vertical-align: text-bottom;
 }
+
+.admin-header {
+    margin-bottom: 24px;
+    #3L > .clearfix;
+    
+    > :last-child {
+        margin-bottom: 0;
+    }
+    
+    h2 {
+        margin-top: 0;
+        margin-bottom: @widgetVerticalPadding;
+        color: #333;
+        &:extend(.admin-word-break);
+    }
+}
+
+h3 {
+    margin: 1.25em 0 .75em 0;
+}
