--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -11,7 +11,8 @@
 @widgetVerticalPadding: 15px;
 
 // responsive
-@breakpointMediumMaxWidth: 979px;
+@breakpointMediumMaxWidth: 991px;
+@breakpointSmallMaxWidth: 767px;
 
 // general colors
 @zotonicBlue: #02A7E6;
