--- a/doc/_static/overrules.css
+++ b/doc/_static/overrules.css
@@ -1,6 +1,16 @@
 body {
     background-color: white;
-    line-height: 1.3;
+    font-size: 16px;
+    line-height: 1.4;
+}
+
+img {
+    max-width: 100%;
+}
+
+ul, ol {
+    margin-left: .7rem;
+    padding-left: .7rem;
 }
 
 div.document {
@@ -8,22 +18,39 @@ div.document {
     margin: auto;
 }
 
-div.note {
-    background-color: #FFFFCC;
-    border: 0;
-}
-
 div.body {
-    padding-top: 10px;
+    padding: 1.5rem 2rem;
 }
 div.sphinxsidebarwrapper {
-    padding-bottom: 20px;
+    padding: 1.5rem 1rem;
 }
 
-div.body h1, div.body h2, div.body h3,
-div.body h4, div.body h5, div.body h6 {
-    background: inherit;
+div.body h1,
+div.body h2,
+div.body h3,
+div.body h4,
+div.body h5,
+div.body h6 {
+    background: none;
+    border-bottom: 1px solid #ddd;
+    line-height: 1.1;
+    margin: 20px 0 10px 0;
+    padding: 0 0 .4rem 0;
 }
+
+div.body h2,
+div.body h3,
+div.body h4,
+div.body h5,
+div.body h6 {
+    color: #424242;
+}
+
+.body h1:first-child,
+div.section:first-child h1 {
+    margin-top: 0;
+}
+
 div.body h1 {
     font-size: 200%;
 }
@@ -44,16 +71,46 @@ div.body p, div.body dd, div.body li {
 div.body em {
     font-style: normal;
 }
-
-pre {
-    font-size: 13px;
-    line-height: 140%;
-    border: 0;
-    background: #f0f0f0;
+div.body li {
+    margin: .25rem 0;    
 }
 
+pre,
+code,
 tt {
-    font-size: 13px;
+    font-size: .9rem;
+    line-height: 1.4;
+}
+
+pre,
+div.note,
+div.admonition,
+div.highlight pre,
+div.seealso {
+    border: none;
+    padding: .7rem;
+    margin: 1rem 0;
+}
+div.note tt {
+    background: rgba(0,0,0,0.15);
+}
+
+div.seealso,
+div.admonition.seealso {
+    background-color: #B3E5FC;
+}
+div.note,
+div.admonition.note {
+    background-color: #FFF59D;
+}
+pre,
+div.admonition {
+    background-color: #eee;
+}
+
+ul.search {
+    list-style: none;
+    margin: 0;
 }
 
 /* table styles */
@@ -71,11 +128,78 @@ table.docutils td, table.docutils th {
     max-width: 100%;
 }
 
+/* top bar */
+
+div.related,
+div.related a,
+div.related a:visited {
+    color: #fff;
+}
+div.related a:hover {
+    text-decoration: none;
+}
+div.related ul {
+    padding: 0;
+}
+div.related ul {
+    font-size: 0;
+}
+div.related ul,
+div.related ul li {
+    line-height: 1.4;
+}
+div.related ul li {
+    line-height: 1.4;
+}
+div.related ul li a {
+    font-size: .9rem;
+    line-height: 1.4;
+    white-space: pre;
+}
+div.related li:not(.right) + li:before,
+div.related li.right + li.right:after {
+    font-size: .9rem;
+    opacity: .75;
+    opacity: .6;
+}
+div.related li:not(.right) + li:before {
+    content: "\00BB";
+    margin: 0 .4rem;
+}
+div.related li.right {
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
+div.related li.right + li.right:after {
+    content: "|";
+    margin: 0 .4rem;
+}
+
+div.related,
+div.footer {
+    width: auto;
+    padding: .5rem 1rem;
+}
+div.related li.right {
+    margin-right: 0;
+    margin-left: 1rem;
+}
+
+/* side bar */
+
 div.sphinxsidebar p.logo {
-    margin: 10px 0 20px 0;
+    margin: 0;
+    height: 43px; /* height of h1 + border */
 }
 div.sphinxsidebar p.logo img {
     width: 140px;
+    height: 25px;
+    margin: 7px 0;
+}
+div.sphinxsidebar p.logo + h3,
+div.sphinxsidebar p.logo + h4 {
+    margin-top: 0;
+    border: none;
 }
 
 div.sphinxsidebar ul,
@@ -85,18 +209,10 @@ div.sphinxsidebar p.topless {
 
 div.sphinxsidebar h3,
 div.sphinxsidebar h4 {
-    font-size: 1.2em;
-    margin: 1em 0 0 0;
-}
-
-div.sphinxsidebar h3,
-div.sphinxsidebar #searchbox {
-    border-top: 1px solid #ccc;
-    padding-top: 10px;
-}
-div.sphinxsidebar h3:first-of-type {
-    border: none;
-    padding-top: 0;
+    font-size: 1.2rem;
+    border-top: 1px solid #ddd;
+    padding: .8rem 0 .15rem 0;
+    margin: .8rem 0 0 0;
 }
 
 div.sphinxsidebar #searchbox form {
@@ -119,7 +235,7 @@ button {
     cursor: pointer;
     display: inline-block;
     font-family: inherit;
-    font-size: 12px;
+    font-size: .9rem;
     font-style: normal;
     font-weight: normal;
     line-height: 18px;
@@ -151,7 +267,7 @@ div.sphinxsidebar input[type=text] {
     color: rgb(85, 85, 85);
     display: inline-block;
     font-family: inherit;
-    font-size: 12px;
+    font-size: .9rem;
     font-style: normal;
     font-weight: normal;
     line-height: 18px;
@@ -182,11 +298,48 @@ dt:target, .highlighted {
     background-color: #FFF9BD;
 }
 
-div.seealso {
-    background-color: #DDF5DB;
-    border: none;
-}
-
 .gray {
     color: #999;
+}
+
+@media (max-width: 820px) {
+    body {
+        font-size: 18px;
+        line-height: 1.5;
+    }
+    pre,
+    code,
+    tt {
+        font-size: 1rem;
+        line-height: 1.4;
+    }
+    div.documentwrapper,
+    div.sphinxsidebar {
+        float: none;
+    }
+    div.bodywrapper {
+        margin: 0;
+    }
+    div.body {
+        padding: 1.5rem .7rem;
+    }
+    div.sphinxsidebar {
+        display: block;
+        margin: 0;
+        width: auto;
+        font-size: 100%;
+    }
+    div.sphinxsidebarwrapper {
+        padding: 1rem .7rem;
+        background-color: #eee;
+    }
+    div.sphinxsidebarwrapper p.logo + h3 {
+        margin-top: 0;
+    }
+    div.sphinxsidebar p.logo {
+        display: none;
+    }
+    div.related ul li a {
+        font-size: 1rem;
+    }
 }
