--- a/modules/mod_admin/lib/less/buttons.less
+++ b/modules/mod_admin/lib/less/buttons.less
@@ -5,3 +5,16 @@
         color: @textColorDark;
     }
 }
+
+.btn {
+	position: relative;
+}
+.btn > .z-icon {
+	@_size: 18px;
+    width: @_size;
+    height: @_size;
+    margin-top: -@_size/2;
+    line-height: @_size;
+    vertical-align: bottom;
+    text-align: center;
+}
